Hacks to run integration test locally